# oxc-ex

./: .gitignore  README.md  mix.exs
lib/: oxc_ex.ex
lib/oxc_ex/: compress_options.ex  native.ex
native/oxc_ex_native/: Cargo.toml  README.md
native/oxc_ex_native/src/: lib.rs
test/: example.js  oxc_ex_test.exs
